# alevel

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  alevel.c  alevel.h  cfg.c  cfg.h  config.h  threads.c  threads.h  ui.c  ui.h  utils.c  utils.h  version.h
src/soundcard/: soundcard.c  soundcard.h
src/utility/: audio.c  audio.h
test/: CMakeLists.txt  ncurses.c
